--- a/html/css/index.css
+++ b/html/css/index.css
@@ -88,7 +88,7 @@ body {
   left: 50%;
   bottom: 75px;
   border-radius: 50%;
-  background: black;
+  background-color: black;
 }
 
 @media(max-width: 500px) {
